change background to white

--- a/Subpages/About/Art_Highlights/index.html
+++ b/Subpages/About/Art_Highlights/index.html
@@ -14,7 +14,7 @@
   <body>
 
 
-        <div  data-animations="pulse" data-hover="dropdown" id="page1" class="fill image-container container-fluid  rounded bg-primary ">
+        <div  data-animations="pulse" data-hover="dropdown" id="page1" class="fill image-container container-fluid  rounded bg-white ">
         <!--  <img src="/Users/s129527/Downloads/grid.png" class="img-fluid " style="background-size:cover" alt="Responsive image" /> -->
 
           <nav class="m-4 navbar navbar-expand-lg rounded navbar-light bg-white">
