--- a/index.html
+++ b/index.html
@@ -25,17 +25,16 @@
   <div class="collapse navbar-collapse " id="navbarSupportedContent">
     <ul class="navbar-nav " data-animations="pulse" data-hover="dropdown">
       <li class="nav-item col-2 ">
-        <a class="nav-link btn btn-purple btn-purple-o" href="file:///Users/s129527/Downloads/oof/CompSciProject/index.html?#">Home <span class="sr-only ">(current)</span></a>
+        <a class="nav-link btn btn-purple btn-purple-o" href="https://marmaladetea.github.io/mbhsnahs.github.io/">Home <span class="sr-only ">(current)</span></a>
       </li>
       <li id="AboutUs" class="dropdown nav-item col-2 ">
         <a data-animations="pulse" data-hover="dropdown" class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"  >
           About
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a id="club-vision-button" class="dropdown-item" href="/Users/s129527/Downloads/oof/CompSciProject/Subpages/About/Club_Vision/index.html">Club Vision</a>
-          <a id="club-rules-button"class="dropdown-item" href="/Users/s129527/Downloads/oof/CompSciProject/Subpages/About/Club_Rules/index.html">Club Rules</a>
-          <a id="past-meetings-button"class="dropdown-item" href="#">Past Meetings</a>
-          <a id="art-highlights-button" class="dropdown-item" href="/Users/s129527/Downloads/oof/CompSciProject/Subpages/About/Art_Highlights/index.html">Art Highlights</a>
+          <a id="club-vision-button" class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/About/Club_Vision/index.html">Club Vision</a>
+          <a id="club-rules-button"class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/About/Club_Rules/index.html">Club Rules</a>
+          <a id="art-highlights-button" class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/About/Art_Highlights/index.html">Art Highlights</a>
       </li>
 
       <li class="nav-item col-2 dropdown ">
@@ -44,9 +43,9 @@
         </a>
 
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/Users/s129527/Downloads/oof/CompSciProject/Subpages/Staff/Officers/Officers.html">Officers</a>
+          <a class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/Staff/Officers/Officers.html">Officers</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/Users/s129527/Downloads/oof/CompSciProject/Subpages/Staff/Contact/index.html">Contact</a>
+          <a class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/Staff/Contact/index.html">Contact</a>
         </div>
       </li>
 
@@ -54,18 +53,19 @@
         <a class="nav-link" href="/Users/s129527/Downloads/oof/CompSciProject/Subpages/Competitions/index.html" id="navbarDropdown" role="button" data-toggle="dropdown"  >
           Competitions</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/Competitions/index.html">Overview</a>
           <a class="dropdown-item" href="https://www.taea.org/VASE/overview.asp">VASE</a>
           <a class="dropdown-item" href="https://tvaa.org/">TVAA</a>
         </div>
       </li>
 
       <li class="nav-item col-2">
-        <a class="nav-link" href="/Users/s129527/Downloads/oof/CompSciProject/Subpages/Calendar/index.html">Calendar <span class="sr-only ">(current)</span></a>
+        <a class="nav-link" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/Calendar/index.html">Calendar <span class="sr-only ">(current)</span></a>
       </li>
       <li class="nav-item col-2 ">
-        <a class="nav-link text-nowrap" href="#">College Links <span class="sr-only ">(current)</span></a>
+        <a class="nav-link text-nowrap" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/College%20Stuff/CollegeLinks/index.html">College Links <span class="sr-only ">(current)</span></a>
       </li>
-      <img class="ml-5"src="/Users/s129527/Downloads/logo.jpg" width="40px" height="40px"></img>
+      <img class="ml-5"src="https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/logo.jpg?raw=true" width="40px" height="40px"></img>
     </ul>
 
   </div>
