update navbar for all

--- a/Subpages/About/Club_Vision/index.html
+++ b/Subpages/About/Club_Vision/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <div  data-animations="pulse" data-hover="dropdown" id="page1" class="fill image-container container-fluid  rounded bg-secondary">
+    <div  data-animations="pulse" data-hover="dropdown" id="page1" class="fill image-container container-fluid  rounded bg-primary ">
     <!--  <img src="/Users/s129527/Downloads/grid.png" class="img-fluid " style="background-size:cover" alt="Responsive image" /> -->
 
       <nav class="m-4 navbar navbar-expand-lg rounded navbar-light bg-white">
@@ -22,52 +22,52 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse " id="navbarSupportedContent">
     <ul class="navbar-nav " data-animations="pulse" data-hover="dropdown">
-      <li class="nav-item col-1 mx-2">
-        <a class="nav-link btn btn-purple btn-border-o" href="#">Home <span class="sr-only ">(current)</span></a>
+      <li class="nav-item col-2 ">
+        <a class="nav-link btn btn-purple btn-purple-o" href="https://marmaladetea.github.io/mbhsnahs.github.io/">Home <span class="sr-only ">(current)</span></a>
       </li>
-      <li id="AboutUs" class="dropdown nav-item col-1 mx-2">
-        <a data-animations="pulse" data-hover="dropdown" class="nav-link btn btn-purple btn-border-o" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"  >
+      <li id="AboutUs" class="dropdown nav-item col-2 ">
+        <a data-animations="pulse" data-hover="dropdown" class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"  >
           About
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a id="club-vision-button" class="dropdown-item" href="#">Club Vision</a>
-          <a id="club-rules-button"class="dropdown-item" href="#">Club Rules</a>
-          <a id="past-meetings-button"class="dropdown-item" href="#">Past Meetings</a>
-          <a id="art-highlights-button" class="dropdown-item" href="#">Art Highlights</a>
+          <a id="club-vision-button" class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/About/Club_Vision/index.html">Club Vision</a>
+          <a id="club-rules-button"class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/About/Club_Rules/index.html">Club Rules</a>
+          <a id="art-highlights-button" class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/About/Art_Highlights/index.html">Art Highlights</a>
       </li>
-      <li class="nav-item col-1 dropdown ">
-        <a class="ml-1  nav-link btn btn-purple btn-border-o" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"  >
+
+      <li class="nav-item col-2 dropdown ">
+        <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"  >
           Staff
         </a>
 
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Officers</a>
+          <a class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/Staff/Officers/Officers.html">Officers</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Contact</a>
+          <a class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/Staff/Contact/index.html">Contact</a>
         </div>
       </li>
-      <li class=" ml-2 nav-item col-2 dropdown">
-        <a id="competitions" class=" nav-link text-center btn btn-purple btn-border-o" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"  >
-          Competitions
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">VASE</a>
-          <a class="dropdown-item" href="#">TVAA</a>
 
+      <li class="nav-item col-2 mr-5 dropdown">
+        <a class="nav-link" href="/Users/s129527/Downloads/oof/CompSciProject/Subpages/Competitions/index.html" id="navbarDropdown" role="button" data-toggle="dropdown"  >
+          Competitions</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/Competitions/index.html">Overview</a>
+          <a class="dropdown-item" href="https://www.taea.org/VASE/overview.asp">VASE</a>
+          <a class="dropdown-item" href="https://tvaa.org/">TVAA</a>
+        </div>
       </li>
+
       <li class="nav-item col-2">
-        <a class="nav-link btn btn-purple btn-border-o" href="#">Calendar <span class="sr-only ">(current)</span></a>
+        <a class="nav-link" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/Calendar/index.html">Calendar <span class="sr-only ">(current)</span></a>
       </li>
       <li class="nav-item col-2 ">
-        <a class="nav-link text-nowrap btn btn-purple btn-border-o" href="#">College Links <span class="sr-only ">(current)</span></a>
+        <a class="nav-link text-nowrap" href="https://marmaladetea.github.io/mbhsnahs.github.io/Subpages/College%20Stuff/CollegeLinks/index.html">College Links <span class="sr-only ">(current)</span></a>
       </li>
+      <img class="ml-5"src="https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/logo.jpg?raw=true" width="40px" height="40px"></img>
     </ul>
-    <form class="form-inline ">
-      <input class="form-control mr-sm-2 mr-auto" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
   </div>
   <div id="page2" class="fill">
   </div>
