change images to links

--- a/Subpages/About/Art_Highlights/index.html
+++ b/Subpages/About/Art_Highlights/index.html
@@ -88,49 +88,49 @@
        <h5 class="text-center col-4 pt-2 ">
         Artist: ARTISTNAME<br>
         PIECE NAME
-        <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+        <img src="/https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
         <br>
         </h5>
 
         <h5 class="text-center col-4 pt-2 ">
          Artist: ARTISTNAME<br>
          PIECE NAME
-         <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+         <img src="/https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
          <br>
          </h5>
 
          <h5 class="text-center col-4 pt-2 ">
           Artist: ARTISTNAME<br>
           PIECE NAME
-          <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+          <img src="/https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
           <br>
           </h5>
 
           <h5 class="text-center col-4 pt-2 ">
            Artist: ARTISTNAME<br>
            PIECE NAME
-           <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+           <img src="/https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
            <br>
            </h5>
 
            <h5 class="text-center col-4 pt-2 ">
             Artist: ARTISTNAME<br>
             PIECE NAME
-            <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+            <img src="/https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
             <br>
             </h5>
 
             <h5 class="text-center col-4 pt-2 ">
              Artist: ARTISTNAME<br>
              PIECE NAME
-             <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+             <img src="/https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
              <br>
              </h5>
 
              <h5 class="text-center col-4 pt-2 ">
               Artist: ARTISTNAME<br>
               PIECE NAME
-              <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+              <img src="/https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
               <br>
               </h5>
      </div>
