--- a/Subpages/Staff/Officers/Officers.html
+++ b/Subpages/Staff/Officers/Officers.html
@@ -88,31 +88,31 @@
     <div class="row p-2 ">
      <h5 class="text-center lead col-4 pt-2 ">
       President: Natalee Sidorchuk
-      <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+      <img src="https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
       <br>
       </h5>
 
       <h5 class="text-center lead col-4 pt-2 ">
        Vice President: Lucy Lamar
-       <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+       <img src="https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
        <br>
        </h5>
 
        <h5 class="text-center lead col-4 pt-2 ">
         Treasurer: Berkeley Bressman
-        <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+        <img src="https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
         <br>
         </h5>
 
         <h5 class="text-center col-4 lead  pt-2 ">
          Historian: Anna Cole
-         <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+         <img src="https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
          <br>
          </h5>
 
          <h5 class="text-center col-4 lead pt-2 ">
           Secretary: Elliot Morrison
-          <img src="/Users/s129527/Downloads/solid.jpg" alt="..." class="lead img-thumbnail" >
+          <img src="https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/solid.jpg?raw=true" alt="..." class="lead img-thumbnail" >
           <br>
           </h5>
 
