change file refs to links on github
so it can be accessible online

--- a/Subpages/About/Club_Rules/index.html
+++ b/Subpages/About/Club_Rules/index.html
@@ -102,7 +102,7 @@
     background-size: 220vh;
     background-position-x: center;
     background-repeat: no-repeat;
-    background-image: url('/Users/s129527/Downloads/C1_Z-zBUsAI3iag.jpg');
+    background-image: url('https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/C1_Z-zBUsAI3iag.jpg?raw=true');
 
   }
 
