--- a/Subpages/Competitions/index.html
+++ b/Subpages/Competitions/index.html
@@ -114,7 +114,7 @@ students to seek further training in art.”
     background-size: 150vh;
     background-position-x: center;
     background-repeat: repeat-y, repeat-x;
-    background-image: url('/Users/s129527/Downloads/boyd art collective (@bcoydapart) _ Twitter_files/ChlOV0YU4AMBlgY.jpg'), url('/Users/s129527/Downloads/backgr.png');
+    background-image: url('https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/ChlOV0YU4AMBlgY.jpg?raw=true'), url('https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/backgr.png?raw=true');
 
 
 
