--- a/Subpages/Staff/Officers/Officers.html
+++ b/Subpages/Staff/Officers/Officers.html
@@ -129,7 +129,7 @@
     background-size: cover;
     background-position-x: center;
     background-repeat: no-repeat;
-    background-image: url('/Users/s129527/Downloads/IMG-4064.JPG');
+    background-image: url('https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/IMG-4066.JPG?raw=true');
 
   }
 
