--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     background-repeat: no-repeat;
 /*    background-image: url('/Users/s129527/Downloads/C7FQaJ_VsAAeD3k.jpg-large'); */
 
-  background-image: url('/Users/s129527/Downloads/C7FQaJ_VsAAeD3k.jpg-large'), url('/Users/s129527/Downloads/C5SS1XFVYAAiYA8.jpg-large');
+  background-image: url('https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/C7FQaJ_VsAAeD3k.jpg-large.jpg?raw=true'), url('https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/C5SS1XFVYAAiYA8.jpg-large.jpg?raw=true');
   background-position: right bottom, left top;
   background-repeat: no-repeat, repeat;
 
