--- a/Subpages/About/Club_Vision/index.html
+++ b/Subpages/About/Club_Vision/index.html
@@ -100,7 +100,7 @@
     background-size: cover;
     background-position-x: center;
     background-repeat: no-repeat;
-    background-image: url('/Users/s129527/Downloads/IMG-4067.JPG');
+    background-image: url('https://github.com/marmaladetea/mbhsnahs.github.io/blob/master/src/IMG-4067.JPG?raw=true');
 
   }
 
